# CSC8507

./: .gitignore  README.md
Team 1/: .gitignore  CMakeLists.txt
Team 1/Assets/Data/: Config.txt  New.txt  Out.txt  level1navMesh.navmesh
Team 1/Assets/Meshes/: Atlantic_bluefin_tuna.mat  Atlantic_bluefin_tuna.msh  Bat.mat  Bat.msh  GameObject.mat  GameObject.msh  StoneWall_FBX1.mat  StoneWall_FBX1.msh  flag_fbx.msh  newcube.mat  newcube.msh  texcube.mat  texcube.msh  webtrcc.mat  webtrcc.msh
Team 1/Assets/Shaders/: compute.comp  detection.comp  edge.frag  effect1.frag  effect1.vert  flag.frag  flag.vert  gBuffer.frag  gBuffer.vert  gate.frag  gate.vert  quad.frag  quad.vert  scene.frag  scene.vert  wireframe.frag  wireframe.vert
Team 1/CSC8503/: AIEntity.cpp  AIEntity.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  ConfigOptions.cpp  ConfigOptions.h  Controller.cpp  Controller.h  CoopGame.cpp  CoopGame.h  GameTechRenderer.cpp  GameTechRenderer.h  Gamepad.cpp  Gamepad.h  HUD.cpp  HUD.h  KeyboardController.cpp  KeyboardController.h  LevelBuilder.cpp  LevelBuilder.h  Main.cpp  MainMenu.cpp  MainMenu.h  NetworkedGame.cpp  NetworkedGame.h  NetworkedPlayer.cpp  NetworkedPlayer.h  Objective.cpp  Objective.h  PlayStation4Renderer.cpp  PlayStation4Renderer.h  Player.cpp  Player.h  RendererFactory.h  SoundBuffer.cpp  SoundBuffer.h  SoundDevice.cpp  SoundDevice.h  SoundSource.cpp  (+11 more)
Team 1/CSC8503CoreClasses/: AABBVolume.h  BehaviourSelector.h  BehaviourSequence.cpp  CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  CollisionVolume.h  Debug.cpp  Debug.h  GameClient.cpp  GameClient.h  GameObject.cpp  GameObject.h  GameServer.cpp  GameServer.h  GameWorld.cpp  GameWorld.h  NavigationMesh.cpp  NavigationMesh.h  NetworkBase.cpp  NetworkBase.h  NetworkObject.cpp  NetworkObject.h  NetworkState.cpp  NetworkState.h  OBBVolume.h  PhysicsObject.cpp  PhysicsObject.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderObject.cpp  RenderObject.h  StateTransition.h  Transform.cpp  Transform.h  pdh.h  psapi.h
Team 1/CSC8503CoreClasses/imgui/: imgui_impl_opengl3.cpp
Team 1/NCLCoreClasses/: CMakeLists.txt  Camera.cpp  Camera.h  Matrix4.cpp  Matrix4.h  MeshGeometry.cpp  MeshGeometry.h  RendererBase.h  ShaderBase.cpp  ShaderBase.h  SimpleFont.cpp  SimpleFont.h  TextureBase.h  TextureLoader.cpp  TextureLoader.h  Vector3.h  Win32Window.cpp
Team 1/OpenGLRendering/: CMakeLists.txt  OGLMesh.cpp  OGLMesh.h  OGLRenderer.cpp  OGLRenderer.h  OGLTexture.cpp  OGLTexture.h
Team 1/PlayStation4Rendering/: CMakeLists.txt  PS4Frame.cpp  PS4Frame.h  PS4MemoryAware.h  PS4Mesh.cpp  PS4Mesh.h  PS4RendererBase.cpp  PS4RendererBase.h  PS4Shader.cpp  PS4Shader.h  PS4Texture.cpp  PS4Texture.h  PlayStation4Rendering.vcxproj  PlayStation4Rendering.vcxproj.filters
